docs(dropdown): update import statement documentation

--- a/stories/Dropdown.stories.mdx
+++ b/stories/Dropdown.stories.mdx
@@ -151,4 +151,12 @@ export const Template = ({
   </Story>
 </Canvas>
 
+```jsx
+// SgdsDropdown uses SgdsButton under the hood
+import { SgdsDropdown, SgdsDropdownItem, SgdsButton} from "@govtechsg/sgds-web-component";
+```
+
 <ArgsTable story="Basic" />
+
+
+
