docs(button): added click method, focus and blur event emitter

--- a/stories/Button.stories.mdx
+++ b/stories/Button.stories.mdx
@@ -77,6 +77,27 @@ import "../lib/Button";
       control: 'text',
       table: { category: "props" },
       description: 'Tells the browser to download the linked file as this filename. Only used when `href` is set.'
+    },
+    click:{
+      table: { 
+        category: "Method",
+        type: { summary: "Method" },
+      },
+      description: 'Simulates a click on the button.'
+    },
+    'sgds-blur':{
+      table: { 
+        category: "Events",
+        type: { summary: "Event" },
+      },
+      description: 'Removes focus from the button.'
+    },
+    'sgds-focus':{
+      table: { 
+        category: "Events",
+        type: { summary: "Event" },
+      },
+      description: 'Sets focus on the button.'
     }
   }}
 />
