--- a/stories/Dropdown.stories.mdx
+++ b/stories/Dropdown.stories.mdx
@@ -8,7 +8,7 @@ import { partDescription, dropdownElementProps } from "./common";
 <Meta
   title="Components/Dropdown"
   argTypes={{
-    ...dropdownElementProps('SgdsDropdown'),
+    ...dropdownElementProps("SgdsDropdown"),
     default: {
       description: "default slot for SgdsDropdownItem element",
       table: {
@@ -74,18 +74,6 @@ import { partDescription, dropdownElementProps } from "./common";
         },
       },
     },
-    valueDI: {
-      name: "value",
-      control: "text",
-      description: "Value of SgdsDropdownItem",
-      table: {
-        defaultValue: { summary: "undefined" },
-        category: "props: SgdsDropdownItem",
-        type: {
-          summary: "string",
-        },
-      },
-    },
   }}
 />
 
@@ -100,63 +88,67 @@ export const Template = ({
   active,
   href,
   disabledDI,
-  value,
   close,
   menuIsOpen,
   dropdownDisabled,
 }) => {
   return html`
-      <div class="d-flex justify-content-center" style="padding-top: 7rem;">
-      <sgds-dropdown
-        .togglerText=${togglerText}
-        .noFlip=${noFlip}
-        .drop=${drop}
-        .menuAlignRight=${menuAlignRight}
-        .popperOpts=${popperOpts}
-        .togglerId=${togglerId}
-        .variant=${variant}
-        .close=${close}
-        .menuIsOpen=${menuIsOpen}
-        .disabled=${dropdownDisabled}
+    <sgds-dropdown
+      .togglerText=${togglerText}
+      .noFlip=${noFlip}
+      .drop=${drop}
+      .menuAlignRight=${menuAlignRight}
+      .popperOpts=${popperOpts}
+      .togglerId=${togglerId}
+      .variant=${variant}
+      .close=${close}
+      .menuIsOpen=${menuIsOpen}
+      .disabled=${dropdownDisabled}
+    >
+      <sgds-dropdown-item
+        .href=${href}
+        .active=${active}
+        .disabled=${disabledDI}
+        >item #1 (argsTable controlled)</sgds-dropdown-item
       >
-        <sgds-dropdown-item
-          .value=${value}
-          .href=${href}
-          .active=${active}
-          .disabled=${disabledDI}
-          >item #1 (argsTable controlled)</sgds-dropdown-item
-        >
-        <sgds-dropdown-item href="https://google.com" value="2">item #2</sgds-dropdown-item>
-        <sgds-dropdown-item href="#" value="3" disabled
-          >item #3</sgds-dropdown-item
-        >
-      </sgds-dropdown>
-      </div>
+      <sgds-dropdown-item href="https://google.com">item #2</sgds-dropdown-item>
+      <sgds-dropdown-item href="#" disabled>item #3</sgds-dropdown-item>
+    </sgds-dropdown>
   `;
 };
 
 # SgdsDropdown, SgdsDropdownItem
 
-<Canvas>
-  <Story
-    name="Basic"
-    height="300px"
-    args={{
-      togglerText: "Dropdown",
-      variant: "secondary",
-      href: "#",
-    }}
-  >
-    {Template.bind({})}
-  </Story>
-</Canvas>
+
+<Story
+  name="Basic"
+  args={{
+    togglerText: "Dropdown",
+    variant: "secondary",
+    href: "#",
+  }}
+>
+  {Template.bind({})}
+</Story>
 
 ```jsx
 // SgdsDropdown uses SgdsButton under the hood
-import { SgdsDropdown, SgdsDropdownItem, SgdsButton} from "@govtechsg/sgds-web-component";
+import {
+  SgdsDropdown,
+  SgdsDropdownItem,
+  SgdsButton,
+} from "@govtechsg/sgds-web-component/Dropdown";
 ```
 
 <ArgsTable story="Basic" />
 
 
-
+```jsx
+<sgds-dropdown>
+  <sgds-dropdown-item>item #1 (argsTable controlled)</sgds-dropdown-item>
+  <sgds-dropdown-item href="https://google.com">item #2</sgds-dropdown-item>
+  <sgds-dropdown-item href="#" disabled>
+    item #3
+  </sgds-dropdown-item>
+</sgds-dropdown>
+``` 
