docs(input): update id to inputId

--- a/stories/Input.stories.mdx
+++ b/stories/Input.stories.mdx
@@ -50,7 +50,7 @@ import "../lib/Input";
       },
       description: "The input's hint text below the label"
     },
-    id:{
+    inputId:{
       control: 'text',
       table:{ 
         category: "props",
@@ -201,7 +201,7 @@ export const Template = (args) =>
       .label=${args.label} 
       .hintText=${args.hintText} 
       .name=${args.name}
-      .id=${args.id}
+      .id=${args.inputID}
       .inputClasses=${args.inputClasses}
       .value=${args.value}
       .pattern=${args.pattern} 
