docs(masthead): add fluid padding x, remove crest color

--- a/stories/Masthead.stories.mdx
+++ b/stories/Masthead.stories.mdx
@@ -103,12 +103,12 @@ import { SgdsMasthead } from "@govtechsg/sgds-web-component";
     </tr>
     <tr>
       <td>
-        <code>--masthead-crest-color</code>
+        <code>--masthead-fluid-padding-x</code>
       </td>
       <td>
-        Sets the Singapore Lion Head crest color
+        Sets the container-fluid padding left and right for viewport width 1024px and above
       </td>
-      <td>rgb(239, 51, 32)</td>
+      <td>0.75rem</td>
     </tr>
   </tbody>
 </table>
