build(react): configure react builds with custom el analyzer and scripts

--- a/stories/components/MainNav.stories.mdx
+++ b/stories/components/MainNav.stories.mdx
@@ -99,7 +99,7 @@ import { partDescription, dropdownElementProps } from "./common";
     },
     defaultMNI: {
       name: "default",
-      description: "default slot for SgdsMainnavItem element",
+      description: "Label for the anchor tag",
       table: {
         category: "slot: SgdsMainnavItem",
       },
