docs(dropdown): separate button and dropdown import paths

--- a/stories/Dropdown.stories.mdx
+++ b/stories/Dropdown.stories.mdx
@@ -132,12 +132,12 @@ export const Template = ({
 </Story>
 
 ```jsx
-// SgdsDropdown uses SgdsButton under the hood
 import {
   SgdsDropdown,
   SgdsDropdownItem,
-  SgdsButton,
 } from "@govtechsg/sgds-web-component/Dropdown";
+// SgdsDropdown uses SgdsButton under the hood
+import { SgdsButton } from "@govtechsg/sgds-web-component/Button"
 ```
 
 <ArgsTable story="Basic" />
