docs(textarea): add focus method

--- a/stories/textarea.stories.mdx
+++ b/stories/textarea.stories.mdx
@@ -201,6 +201,13 @@ import "../lib/Textarea";
       },
       description: "Select textarea content"
     },
+    focus:{
+      table:{ 
+        category: "Methods",
+        type: { summary: "Method" },
+      },
+      description: "Sets the focus of textarea. <br>Parameters (options: [FocusOptions](https://developer.mozilla.org/en-US/docs/Web/API/HTMLElement/focus#parameters))",
+    },
   }}
 />
 
