feat(button): added icon variant

--- a/stories/Button.stories.mdx
+++ b/stories/Button.stories.mdx
@@ -24,6 +24,7 @@ import "../lib/Button";
         'dark',
         'light',
         'link',
+        'icon',
         'outline-primary',
         'outline-secondary',
         'outline-success',
