--- a/stories/Checkbox.stories.mdx
+++ b/stories/Checkbox.stories.mdx
@@ -1,9 +1,6 @@
 import { Canvas, Meta, Story, ArgsTable } from "@storybook/addon-docs";
-import { html } from "lit";
-import { withWebComponentsKnobs } from "storybook-addon-web-components-knobs";
-import { withKnobs, text, number } from "@storybook/addon-knobs";
+import { html } from "lit-html";
 import "../lib/Checkbox";
-import { SgdsCheckbox } from "../lib/Checkbox";
 
 <Meta
   title='Components/Checkbox'
