--- a/stories/QuantityToggle.stories.mdx
+++ b/stories/QuantityToggle.stories.mdx
@@ -1,7 +1,5 @@
 import { Canvas, Meta, Story, ArgsTable } from "@storybook/addon-docs";
-import { html } from "lit";
-import { withWebComponentsKnobs } from "storybook-addon-web-components-knobs";
-import { withKnobs, text, number } from "@storybook/addon-knobs";
+import { html } from "lit-html";
 import  "../lib/QuantityToggle";
 
 <Meta
