--- a/stories/Accordion.stories.mdx
+++ b/stories/Accordion.stories.mdx
@@ -4,21 +4,72 @@ import "../lib/Accordion";
 
 <Meta
   title="Components/Accordion"
+  argTypes={{
+    summary:{
+      control: "text" ,
+      table: { category: "props" },
+      description: 'Title of the accordion'
+    },
+    'sgds-show':{
+      table: { 
+        category: "Events",
+        type: { summary: "Event" },
+      },
+      description: 'Trigger an event on show.'
+    },
+    'sgds-after-show':{
+      table: { 
+        category: "Events",
+        type: { summary: "Event" },
+      },
+      description: 'Trigger an event on show after animation is completed.'
+    },
+    'sgds-hide':{
+      table: { 
+        category: "Events",
+        type: { summary: "Event" },
+      },
+      description: 'Trigger an event on hide.'
+    },
+    'sgds-after-hide':{
+      table: { 
+        category: "Events",
+        type: { summary: "Event" },
+      },
+       description: 'Trigger an event on hide after animation is completed.'
+    },
+    content:{
+      defaultValue: 'This is the accordion content',
+      control: "text" ,
+      table: { 
+        category: "Slot",
+        type: { summary: "Slot" },
+      },
+       description: 'Content of the accordion.'
+    }
+  }}
 />
 
 export const Template = (args) =>
   html`
-    <sgds-accordion summary="title"> 
-      Lorem ipsum dolor sit amet.
+    <sgds-accordion
+     .summary=${args.summary}
+    > 
+      ${args.content} 
+    </sgds-accordion>
+    <sgds-accordion
+     .summary=${args.summary}
+    > 
+      ${args.content} 
     </sgds-accordion>
   `;
 
-# SgdsButton
+# SgdsAccordion
 
 Buttons communicate actions that users can take throughout your portal which can be used in places such as modals, forms and cards
 
 <Canvas>
-  <Story name="Basic" args={{ variant: "primary" }}>
+  <Story name="Basic" args={{ summary: "This is an accordion" }}>
     {Template.bind({})}
   </Story>
 </Canvas>
@@ -26,7 +77,7 @@ Buttons communicate actions that users can take throughout your portal which can
 ## API
 
 ```jsx
-import { SgdsButton } from "@govtechsg/sgds-web-component";
+import { SgdsBAccordion } from "@govtechsg/sgds-web-component";
 ```
 
 <ArgsTable story="Basic" />
